--- a/外观/外观.strings
+++ b/外观/外观.strings
@@ -2,7 +2,7 @@
   外观.strings
   设计模式
 
-外观模式为子系统中一组不同的借口提供统一的接口。外观定义了上层接口，
+ 外观模式为子系统中一组不同的接口提供统一的接口。外观定义了上层接口，
  通过降低复杂度和隐藏子系统间的通信及依赖关系，让子系统更易于使用
 */
 
