--- a/原型/原型.strings
+++ b/原型/原型.strings
@@ -5,3 +5,9 @@
 客户端知道抽象Prototype类。在运行时，抽象Prototype子类的任何对象都可以按客户端的意愿被复制。
  因此无需手工创建就可以制造同一个类型的多个实例
 */
+
+
+/*  
+ 组合
+ 将对象组合成树形结构以表示 部分-整体 的层次结构。组合使得用户对单个对象和组合的使用具有一致性
+ */
